# ocaml-practice

./: dune-project
lib/: array_practice.ml  dune  lib.ml  subproject1.ml  subproject2.ml  times_table.ml
test/: dune
